styles/_blog.css
.blog-container {
	max-width: 640px;
	margin: 0 auto;
	padding: 0 2rem 3rem;
}

header.blog-container {
	padding-top: 8rem;
	position: relative;
}

.blog-avatar {
	display: flex;
	align-items: center;
	justify-content: center;
	position: absolute;
	top: 10.8rem;
	right: -6rem;
	height: 240px;
	width: 240px;
}

.blog-decal {
	position: absolute;
	top: 8rem;
	left: -16rem;
	z-index: -1;
}

.blog-decal > svg {
	opacity: 0.5;
}

.blog-avatar svg {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
}

.blog-avatar img {
	border-radius: 50%;
	overflow: hidden;
	width: calc(100% - 1rem);
	height: auto;
}

.blog-container h1 {
	font-size: 4.5rem;
	line-height: 1.02em;
	max-width: 18ch;
	margin-bottom: 0;
}

#manual > span {
	display: inline-block;
	overflow: visible;
	vertical-align: top;
}

.whtSpc {
	width: 0.6ch;
}

.blog-container p {
	font-size: 1rem;
	line-height: 1.8em;
	max-width: 50ch;
	font-weight: 400;
	font-variation-settings: "wght" 360;
	margin-top: 1em;
}

.blog-container p > a {
	border: none;
	font-weight: 600;
	font-variation-settings: "wght" 540;
}

.blog-list {
	list-style: none;
	padding: 0;
	margin: 0;
	margin-bottom: 3rem;
}

.blog-item {
	margin-bottom: 1.4rem;
	display: grid;
	align-items: center;
	grid-template-columns: 3.6rem auto;
	column-gap: 2rem;
	row-gap: 0.4rem;
}

.blog-item-title {
	font-size: 1.28rem;
	letter-spacing: -0.02em;
	line-height: 1.4em;
	width: max-content;
	color: #222;
}

.blog-item-date {
	text-transform: uppercase;
	font-size: 0.84em;
	font-family: "SF Mono", SFMono-Regular, ui-monospace, "Segoe UI Mono",
		"Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Fira Mono", monospace;
	color: #444444;
	width: 10ch;
}

.blog-item-title {
	width: max-content;
	color: #222;
	position: relative;
	white-space: nowrap;
	cursor: pointer;
	border: none;
}

@media (max-width: 720px) {
	.blog-avatar {
		position: absolute;
		height: 30vw;
		width: 30vw;
		right: -4rem;
	}
}

